fixed small screen x&y overflow

--- a/octopus/public/global.css
+++ b/octopus/public/global.css
@@ -536,6 +536,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 3rem;
 }
 
+.h-\[13\] {
+  height: 13;
+}
+
+.h-\[13rem\] {
+  height: 13rem;
+}
+
 .w-56 {
   width: 14rem;
 }
@@ -568,6 +576,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 100vw;
 }
 
+.w-\[20rem\] {
+  width: 20rem;
+}
+
 .flex-row-reverse {
   flex-direction: row-reverse;
 }
@@ -578,10 +590,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .items-center {
   align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -655,19 +663,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(5 150 105 / var(--tw-bg-opacity));
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
-.p-8 {
-  padding: 2rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -690,6 +685,24 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-zinc-800 {
   --tw-text-opacity: 1;
   color: rgb(39 39 42 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .sm\:h-56 {
+    height: 14rem;
+  }
+
+  .sm\:w-\[7rem\] {
+    width: 7rem;
+  }
+
+  .sm\:w-\[23rem\] {
+    width: 23rem;
+  }
+
+  .sm\:w-\[16rem\] {
+    width: 16rem;
+  }
 }
 
 @media (min-width: 768px) {
